--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lizzochek/auth_lab#readme",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.0.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
