--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "on-finished": "^2.4.1",
     "request": "^2.88.2",
     "uuid": "^9.0.0"
