--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/lizzochek/auth_lab#readme",
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.0.0",
+    "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "on-finished": "^2.4.1",
